correçõe e classe para swagger